# craigslist-scraper

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/lib/: flag_parser.rs  lib.rs  row_collector.rs  slack.rs  url.rs
